Portal Design Init.

--- a/MVC App/GSC/wwwroot/css/site.css
+++ b/MVC App/GSC/wwwroot/css/site.css
@@ -3,33 +3,62 @@
     padding-bottom: 20px;
 }
 
+
 /* Wrapping element */
+
+
 /* Set some basic padding to keep content from hitting the edges */
+
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
 
+
 /* Carousel */
+
 .carousel-caption p {
     font-size: 20px;
     line-height: 1.4;
 }
 
+
 /* Make .svg files in the carousel display properly in older browsers */
+
 .carousel-inner .item img[src$=".svg"] {
     width: 100%;
 }
 
+
 /* QR code generator */
+
 #qrCode {
     margin: 15px;
 }
 
+
 /* Hide/rearrange for smaller screens */
+
 @media screen and (max-width: 767px) {
     /* Hide captions */
     .carousel-caption {
         display: none;
     }
 }
+
+
+/* Top Bar */
+
+.navbar-default {
+    /* background-color: rgb(22, 100, 167);
+    border-color: #2e8bcc; */
+    margin-top: -50px;
+}
+
+/* .navbar-default .nav-item > a {
+    color: #dddddd;
+}
+
+.navbar-default .nav-item > a:hover {
+    color: #000000;
+}  */
