--- a/MVC App/GSC/Views/Shared/_Layout.cshtml
+++ b/MVC App/GSC/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
             crossorigin="anonymous">
         <link rel="stylesheet" href="~/css/site.css" />
-        <link rel="stylesheet" href="~/font-awesome/font-awesome.min.css" />
+        <link rel="stylesheet" href="~/font-awesome-4.7.0/css/font-awesome.min.css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css" asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
@@ -20,30 +20,10 @@
 </head>
 
 <body>
-    <!-- <ul class="nav navbar-default">
-        <li class="nav-item">
-            <a class="nav-link active" href="#">GSC</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown justify-content-end">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Separated link</a>
-            </div>
-        </li>
-    </ul> -->
-
-    <nav class="navbar navbar-expand-lg navbar-light navbar-default">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand navbar-dark bg-dark flex-column flex-md-row navbar-default fixed-top">
+        <a class="navbar-brand" href="#">
+            <span class="fa fa-android brand-icon"></span>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -59,6 +39,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
                 </li>
+
+            </ul>
+
+            <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
@@ -71,16 +55,14 @@
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
+
+    <nav class="navbar fixed-bottom navbar-light bg-light">
+        <a class="navbar-brand" href="#">Fixed bottom</a>
+    </nav>
+
     <div class="container-fluid">
         @RenderBody()
     </div>
