--- a/MVC App/GSC/wwwroot/css/site.css
+++ b/MVC App/GSC/wwwroot/css/site.css
@@ -45,27 +45,10 @@
         display: none;
     }
 }
-
-
-/* Top Bar 
-
-.navbar-default {
-     background-color: rgb(22, 100, 167);
-    border-color: #2e8bcc; 
-    margin-top: -50px;
+/* -- Toolbar -- */
+.toolbar {
+    margin-top:25px !important;
+    padding-top:50px !important;
 }
-
-.navbar-default .navbar-collapse .navbar-nav .nav-item > a {
-    color: #dddddd;
-}
-
-.navbar-default .navbar-collapse .navbar-nav .nav-item > a:hover {
-    color: #f2f2f2;
-}
-
-.brand-icon:hover {
-    color: #00e64d;
-}
-*/
-
+/* -- End Toolbar -- */
 
