--- a/MVC App/GSC/Views/Shared/_Toolbar.cshtml
+++ b/MVC App/GSC/Views/Shared/_Toolbar.cshtml
@@ -1,21 +1,23 @@
-<nav class="navbar navbar-expand bg-primary flex-column flex-md-row toolbar">
-    <a class="navbar-brand" href="#">
-        <span class="fa fa-android brand-icon"></span>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home
-                    <span class="sr-only">(current)</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-        </ul>
+ <div class="card toolbar fixed-top bg-light">      
+        <div class="d-flex justify-content-end">
+            <div class="mr-auto p-1">
+                <ol class="breadcrumb bg-light ">
+                    <li class="breadcrumb-item">
+                        <a href="#">Home</a>
+                    </li>
+                    <li class="breadcrumb-item">
+                        <a href="#">Entity</a>
+                    </li>
+                    <li class="breadcrumb-item active" aria-current="page">List</li>
+                </ol>
+            </div>
+            <div class="p-1">
+                <button type="button" class="toolbar-btn btn-primary">
+                   <span class="fa fa-floppy-o"></span> SAVE</button>
+            </div>
+            <div class="p-1">
+                <button type="button" class="toolbar-btn btn-primary">
+                   <span class="fa fa-trash-o"></span> DELETE</button>
+            </div>
+        </div>
     </div>
-</nav>
