--- a/MVC App/GSC/Views/Home/Index.cshtml
+++ b/MVC App/GSC/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="row">
+<!-- <div class="row">
     <h1>Welcome to Home Page</h1>
 </div>
  <div class="row">
@@ -15,4 +15,4 @@
     <div class="col-sm">
       One of three columns
     </div>
-  </div>
+  </div> -->
