--- a/MVC App/GSC/Views/Shared/_Navigation.cshtml
+++ b/MVC App/GSC/Views/Shared/_Navigation.cshtml
@@ -6,7 +6,6 @@
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -24,7 +23,7 @@
                     aria-expanded="false">
                     John Doe
                 </a>
-                <div class="dropdown-menu dropdown-menu-right">
+                <div class="dropdown-menu dropdown-menu-right" style="z-index: 1040;">
                     <form class="px-4 py-3">
                         <div class="form-group">
                             <label for="exampleDropdownFormEmail1">Email address</label>
