--- a/MVC App/GSC/Views/Shared/_Layout.cshtml
+++ b/MVC App/GSC/Views/Shared/_Layout.cshtml
@@ -25,24 +25,22 @@
          Html.RenderPartial("_Toolbar.cshtml");
      }  
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin-top:40px;">
         @RenderBody()
     </div>
 
-     @{
-        Html.RenderPartial("_Footer.cshtml");      
-     }
-   
+    <div class="card footer fixed-bottom bg-light">
+        <div class="d-flex justify-content-end">
+            @RenderSection("FooterLeft", required: false)
+            @RenderSection("FooterRight", required: false)
+        </div>
+    </div>
 
 
     <environment include="Development">
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
-            crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
-            crossorigin="anonymous"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
+       @{
+            await Html.RenderPartialAsync("_CoreScriptsPartialv4");
+       }
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js" asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
