--- a/MVC App/GSC/Views/Shared/_Navigation.cshtml
+++ b/MVC App/GSC/Views/Shared/_Navigation.cshtml
@@ -9,12 +9,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home
+                <a class="nav-link" href="~/">Home
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="~/Home/EntityList">List Template</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Home/EntityForm">Form Tempate</a>
             </li>
         </ul>
         <ul class="navbar-nav">
@@ -23,7 +26,7 @@
                     aria-expanded="false">
                     John Doe
                 </a>
-                <div class="dropdown-menu dropdown-menu-right" style="z-index: 1040;">
+                <div class="dropdown-menu dropdown-menu-right">
                     <form class="px-4 py-3">
                         <div class="form-group">
                             <label for="exampleDropdownFormEmail1">Email address</label>
