--- a/Stark/Stark/Views/Shared/_Navigation.cshtml
+++ b/Stark/Stark/Views/Shared/_Navigation.cshtml
@@ -19,6 +19,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="~/Home/EntityForm">Form Tempate</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="~/Auth/NewUser">New User</a>
+            </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
